Material order form working

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,9 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
+  <link rel="stylesheet" href="test/font.css">
+  <link rel="stylesheet" href="test/ng2-material.css">
+
   <script src="https://use.typekit.net/kmv5qdr.js"></script>
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
 </head>
