webpack changes MD WIP

--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,30 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-  <base href="/">
+    <base href="/">
 
-  <meta charset="utf-8">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-  <title>We Love Ironing</title>
+    <title>We Love Ironing</title>
 
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <!--
+    <link rel="stylesheet" href="../node_modules/ng2-material/dist/ng2-material.css">
+    <link rel="stylesheet" href="../node_modules/ng2-material/dist/font.css">
 
-  <link rel="stylesheet" href="test/font.css">
-  <link rel="stylesheet" href="test/ng2-material.css">
+    <link rel="stylesheet" href="test/font.css">
+    <link rel="stylesheet" href="test/ng2-material.css">
+    -->
 </head>
 
 
 <body>
-  <app></app>
+    <app></app>
 
 </body>
+
 </html>
